--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+        <title>CLJ Linear Partition Problem</title>
+        <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+    </head>
     <body>
+        <div id="images"></div>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="linear_partition.js" type="text/javascript"></script>
         <script type="text/javascript">goog.require("linear_partition.core");</script>
