process images after load using atom counter

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="linear_partition.js" type="text/javascript"></script>
         <script type="text/javascript">goog.require("linear_partition.core");</script>
+        <!--<script src="../lib/linear-partition.js"></script>-->
     </body>
 </html>
